--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,7 @@
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:'Poppins', sans-serif;
+  font-family: inherit; /* follow app font (Nunito) */
 }
 
 body{
@@ -632,7 +632,7 @@ a{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:'Poppins', sans-serif;
+  font-family: inherit; /* follow app font (Nunito) */
 }
 
 body{
